# mgit

./: .gitignore  .safety-project.ini  AGENTS.md  CHANGELOG.md  CLAUDE.md  CRUSH.md  FOLLOWUP.md  Makefile  README.md  SECURITY.md  mgit.spec  pyproject.toml  ralph-spinning-git-tree.md  repomix-output.md  test_multiprovider.sh  test_sync_comprehensive.py  test_sync_focused.py
.claude/: ralph-loop.local.md
.github/workflows/: auto-release.yml  release.yml
.serena/: project.yml
docs/: CLAUDE.md  README.md
docs/ADR/: 001-provider-abstraction.md  002-configuration-hierarchy.md  003-concurrent-operations.md  004-pattern-matching-strategy.md
docs/providers/: README.md  azure-devops-usage-guide.md  bitbucket-usage-guide.md  github-usage-guide.md  provider-comparison-guide.md
docs/specs/: pattern-combinations.md  worst-case-analysis.md
docs/specs/_completed/change-pipeline-feature/: overview.md
docs/specs/_completed/change-pipeline-feature/phases-done/: phase-05-production-features.md
docs/specs/_completed/match-and-simplify/: overview.md
docs/specs/_completed/match-and-simplify/phases-done/: phase-01-NOT-NEEDED-bug-does-not-exist.md  phase-02-extract-multi-provider-resolution-COMPLETED.md  phase-03-enable-multi-provider-clone.md
docs/specs/change-pipeline-feature/phases-done/: phase-01-basic-change-detection.md  phase-01-fix-file-level-output.md  phase-02-changeset-persistence.md  phase-03-smart-content-embedding.md  phase-04-repository-discovery-integration.md  phase-05-production-features.md
docs/specs/change-pipeline-feature/phases-pending/: phase-04-repository-discovery-integration.md
docs/specs/extended-errors/: overview.md
docs/specs/match-and-simplify/phases-done/: phase-01b-fix-multi-provider-bugs-COMPLETED.md  phase-01b-fix-multi-provider-bugs.md  phase-02-extract-multi-provider-resolution.md  phase-03-enable-multi-provider-clone.md  phase-04-enable-multi-provider-pull.md  phase-05-add-basic-sync.md  phase-06-enhance-sync-features.md
docs/specs/match-and-simplify/phases-pending/: phase-04-enable-multi-provider-pull.md  phase-05-add-basic-sync.md  phase-06-enhance-sync-features.md
docs/specs/query-cache/: overview.md
docs/superpowers/specs/: 2026-05-14-sync-ux-reporting-design.md
files-to-review-for-deletion/tests/e2e/: test_clone_all_adaptive.py  test_clone_all_minimal.py  test_clone_all_partial_matching.py  test_clone_all_provider_isolation.py
files-to-review-for-deletion/tests/integration/: test_config_commands.py
kb/: github-actions-comprehensive-reference.md
mgit/: __init__.py  __main__.py  constants.py  exceptions.py  processing.py
mgit/changesets/: __init__.py  models.py  storage.py
mgit/commands/: bulk_operations.py  diff.py  diff_remote.py  listing.py  status.py  sync.py
mgit/config/: yaml_manager.py
mgit/content/: __init__.py  content_strategies.py  embedding.py  mime_detector.py
mgit/discovery/: change_discovery.py
mgit/git/: __init__.py  manager.py  utils.py
mgit/monitoring/: server.py
mgit/pipeline/: __init__.py  compression.py  monitoring.py  optimization.py  recovery.py  validation.py
mgit/providers/: azdevops.py  base.py  bitbucket.py  exceptions.py  factory.py  github.py  manager.py  registry.py
mgit/security/: config.py  credentials.py  integration.py  logging.py  monitor.py  patches.py  validation.py
mgit/ui/: __init__.py  ascii_tree.py  help_animation.py  terminal.py
mgit/utils/: async_executor.py  collision_resolver.py  directory_scanner.py  multi_provider_resolver.py  pattern_matching.py  platform_compat.py  progress.py  query_parser.py
scripts/: build_all.sh  build_mac_and_linux.sh  build_ubuntu.sh  build_windows_from_wsl.sh  make.py  make_build.py  make_clean.py  make_format.py  make_lint.py  make_test.py  make_test_e2e.py  make_validate.py  make_version.py  mgit_list_test.sh  mgit_special_chars_test.sh  mgit_status_test.sh  mgit_sync_test.sh  pre-commit  test_binary.py  update_version.py
tests/: conftest.py
tests/e2e/: __init__.py  docker-compose.gitea.yml  gitea_fixtures.py  test_all_providers_filtering.py  test_authentication.py  test_clone_all.py  test_clone_all_partial_matching.py  test_clone_all_provider_isolation.py  test_config.py  test_list.py  test_sync_edge_cases.py  test_sync_flat_layout.py
tests/integration/: test_repository_commands.py  test_status_command.py
tests/unit/: test_ascii_tree.py  test_bulk_operations.py  test_flat_layout.py  test_git.py  test_listing_github.py  test_mime_detector.py  test_provider_config_routing.py  test_providers.py  test_sync_local.py  test_sync_reporting.py  test_terminal.py  test_utils.py  test_yaml_manager_env_expansion.py
