[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mgit"
version = "0.12.0"
description = "Multi-provider Git management tool"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [{ name = "Steve Antonakakis", email = "steve.antonakakis@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp>=3.9.0",
    "azure-devops>=7.1.0b1",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0,<0.16.0",
    "click>=8.1.7,<8.2.0",
    "PyYAML>=6.0",
    "ruamel.yaml>=0.18.0",
    "cryptography>=44.0.1",
]

[project.scripts]
mgit = "mgit.__main__:entrypoint"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.8.0",
    "ty",
    "pyinstaller>=6.0",
    "bandit[toml]>=1.8.0",
    "pip-audit>=2.9.0",
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.61.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["mgit"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501", "B008", "B904", "UP012", "UP045", "SIM102", "SIM105", "SIM114", "SIM116"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["mgit", "tests"]
respect-ignore-files = true

[tool.ty.terminal]
output-format = "concise"
error-on-warning = false

[tool.ty.rules]
# Start lenient, tighten over time
# Suppress noisy categories until codebase is cleaned up
possibly-unresolved-reference = "warn"
possibly-missing-attribute = "warn"
invalid-argument-type = "warn"
invalid-parameter-default = "warn"
unresolved-attribute = "warn"
invalid-method-override = "warn"
not-iterable = "warn"
unsupported-operator = "warn"
unknown-argument = "warn"
invalid-return-type = "warn"
invalid-assignment = "warn"
unresolved-import = "warn"
invalid-context-manager = "warn"
call-non-callable = "warn"
no-matching-overload = "warn"
missing-argument = "warn"
unused-ignore-comment = "ignore"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (for long-running tests)",
    "requires_network: marks tests that require network access",
    "asyncio: marks tests as async tests",
    "e2e: marks tests as end-to-end tests against real APIs",
    "docker: tests requiring Docker (deselect with '-m not docker')",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=mgit",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=0",
]
